--- a/ExpenseIt/ExpenseIt/ExpenseItHome.xaml
+++ b/ExpenseIt/ExpenseIt/ExpenseItHome.xaml
@@ -9,6 +9,10 @@
       Title="ExpenseIt - Home">
 
     <Grid Margin="10,0,10,10">
+        <Grid.Background>
+            <ImageBrush ImageSource="watermark.png"  />
+        </Grid.Background>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="230" />
             <ColumnDefinition />
@@ -21,19 +25,14 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Grid.Background>
-            <ImageBrush ImageSource="watermark.png"/>
-        </Grid.Background>
+        <!-- People list -->
 
-
-        <Label Grid.Column="1" VerticalAlignment="Center" FontFamily="Trebuchet MS" 
-        FontWeight="Bold" FontSize="18" Foreground="#0066cc">
+        <Label Grid.Column="1" Style="{StaticResource headerTextStyle}" >
             View Expense Report
         </Label>
 
-        <!-- People list -->
-        <Border Grid.Column="1" Grid.Row="1" Height="35" Padding="5" Background="#4E87D4">
-            <Label VerticalAlignment="Center" Foreground="White">Names</Label>
+        <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource listHeaderStyle}">
+            <Label Style="{StaticResource listHeaderTextStyle}">Names</Label>
         </Border>
         <ListBox Name="peopleListBox" Grid.Column="1" Grid.Row="2">
             <ListBoxItem>Mike</ListBoxItem>
@@ -43,7 +42,6 @@
         </ListBox>
 
         <!-- View report button -->
-        <Button Grid.Column="1" Grid.Row="3" Margin="0,10,0,0" Width="125"
-Height="25" HorizontalAlignment="Right" Click="Button_Click">View</Button>
+        <Button Grid.Column="1" Grid.Row="3" Click="Button_Click" Style="{StaticResource buttonStyle}">View</Button>
     </Grid>
 </Page>
